// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.academic.stub.academic;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;

message Empty {
}

message AllStudentsDataResponse {

  message Student {
    string studentNumber = 1;
    string studentName = 2;
    string major = 3;
    repeated string courseNumber = 4;
  }
  repeated Student students = 1;
}

message AllCoursesDataResponse {

  message Course {
    string courseNumber = 1;
    string professorLastName = 2;
    string courseName = 3;
    repeated string advancedCourseNumber = 4;
  }
  repeated Course courses = 1;
}


service StudentService {
  rpc GetAllStudentsData (Empty) returns (AllStudentsDataResponse) {}
}

service CourseService {
  rpc GetAllCoursesData (Empty) returns (AllCoursesDataResponse) {}
}